Remove redundant service layer; small refactoring